[package]
name = "acopen"
version = "0.1.1"
edition = "2021"
license = "MIT"
authros = ["Takumi Mori"]
description = "Command line tool to open AtCoder problem pages."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
webbrowser = "0.6.0"
